--- a/package.json
+++ b/package.json
@@ -13,17 +13,19 @@
     "@fortawesome/free-regular-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/vue-fontawesome": "^3.0.1",
-    "vue-toastification": "^2.0.0-rc.5",
-    "vuetify": "^3.0.0-beta.0",
-    "vue-recaptcha": "^2.0.3",
-    "vuex-persistedstate": "^4.1.0",
-    "vuex": "^4.0.0",
-    "vue-router": "^4.0.3",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.1",
+    "bootstrap-icons": "^1.10.3",
     "buffer": "^6.0.3",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "mdb-ui-kit": "^6.2.0",
+    "vue": "^3.2.13",
+    "vue-recaptcha": "^2.0.3",
+    "vue-router": "^4.0.3",
+    "vue-toastification": "^2.0.0-rc.5",
+    "vuetify": "^3.0.0-beta.0",
+    "vuex": "^4.0.0",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
