--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.2.1",
     "bootstrap-icons": "^1.10.3",
+    "bootstrap-vue": "^2.23.1",
     "buffer": "^6.0.3",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
